--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dist:build": "webpack",
     "dist:build-min": "webpack"
   },
-  "main": "dist/selectabular.js",
+  "main": "dist",
   "repository": {
     "type": "git",
     "url": "https://github.com/reactabular/selectabular.git"
@@ -25,18 +25,22 @@
   ],
   "jest": {
     "collectCoverage": true,
-    "moduleFileExtensions": ["js"],
-    "moduleDirectories": ["node_modules"]
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ]
   },
   "author": "Juho Vepsalainen <bebraw@gmail.com> (http://github.com/bebraw)",
   "license": "MIT",
-  "main": "dist",
   "bugs": {
     "url": "https://github.com/reactabular/selectabular/issues"
   },
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
