--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dist:build": "webpack",
     "dist:build-min": "webpack"
   },
-  "main": "dist",
+  "main": "dist/selectabular.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/reactabular/selectabular.git"
