--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "keywords": [
     "select",
     "selecting",
-    "table-filtering"
+    "table-filtering",
+    "reactabular"
   ],
   "files": [
     "dist"
