--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
   "bugs": {
     "url": "https://github.com/reactabular/selectabular/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.6.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
@@ -68,13 +70,12 @@
     "eslint-plugin-react": "^6.7.1",
     "git-prepush-hook": "^1.0.1",
     "jest": "^17.0.3",
-    "react": "^15.4.1",
-    "react-addons-test-utils": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "rimraf": "^2.5.4"
   },
   "peerDependencies": {
-    "react": ">= 15.0.0 < 16.0.0"
+    "react": ">= 15.0.0 < 17.0.0"
   },
   "pre-push": [
     "test:all"
